# pi-fanctl

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  consts.h  devnotes.txt  install.sh  main.c  run.c  run.h  temp.c  temp.h
.github/workflows/: codeql.yml
assets/: devnotes.txt
